After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 736817 - Creating cairo surfaces of the wrong depth causes fatal BadMatch errors
Creating cairo surfaces of the wrong depth causes fatal BadMatch errors
Status: RESOLVED FIXED
Product: libwnck
Classification: Core
Component: general
git master
Other Linux
: Normal blocker
: ---
Assigned To: libwnck maintainers
libwnck maintainers
Depends on:
Blocks:
 
 
Reported: 2014-09-17 16:20 UTC by Chris Wilson
Modified: 2014-09-22 13:28 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
xutils: Support non-standard depths for icon pixmaps (2.67 KB, patch)
2014-09-17 16:20 UTC, Chris Wilson
none Details | Review
xutils: Support non-standard depths for icon pixmaps (2.73 KB, patch)
2014-09-17 16:22 UTC, Chris Wilson
accepted-commit_now Details | Review
xutils: Support non-standard depths for icon pixmaps (2.80 KB, patch)
2014-09-18 06:33 UTC, Chris Wilson
none Details | Review

Description Chris Wilson 2014-09-17 16:20:10 UTC
Created attachment 286402 [details] [review]
 xutils: Support non-standard depths for icon pixmaps

Currently the presumption is that applications assign a Pixmap for their
icon image using the default visual for the screen, or as an A1 bitmap
for the icon mask. At least SDL doesn't conform to this rule and always
uses 32-bit ARGB Pixmaps. This cases the XCopyArea used by Cairo to grab
the image surface from the Pixmap to fail as the source Pixmap and the
cairo surface are of different depths and triggers a BadMatch - killing
libwnck and its client gnome-shell/gala et al.
Comment 1 Chris Wilson 2014-09-17 16:22:48 UTC
Created attachment 286403 [details] [review]
xutils: Support non-standard depths for icon pixmaps

git add is your friend.
Comment 2 Marco Trevisan (Treviño) 2014-09-17 16:49:35 UTC
Review of attachment 286403 [details] [review]:

Agree, thanks!
Comment 3 Chris Wilson 2014-09-18 06:32:43 UTC
Hmm, Permission denied (publickey). Long time no use, looks like I need to reactivate my account. I just fixed up a spelling mistake in the changelog, could I leave it in your hands to apply?
Comment 4 Chris Wilson 2014-09-18 06:33:08 UTC
Created attachment 286444 [details] [review]
xutils: Support non-standard depths for icon pixmaps

Spelling fix.